Fix modals and it's overflow

--- a/packages/editor/src/components/modals/shareModal/style.less
+++ b/packages/editor/src/components/modals/shareModal/style.less
@@ -25,6 +25,7 @@
 	color: #fff;
 	transition: visibility 0s, opacity 0.2s ease;
 	padding: 0px 0px 15px 0px;
+	max-width: 100%;
 
     .content {
 	    display: flex;
@@ -32,7 +33,8 @@
 	    align-items: left;
 	    align-content: center;
         line-height: 1.5em;
-        padding: 0px 20px;
+		padding: 0px 20px;
+		overflow: auto;
 
 		.innerContent {
 			padding: 20px 20px;
